# openglfun2

./: .gitignore  CMakeLists.txt
1/Soil/: CMakeLists.txt
1/fun1/: fun1.cpp
1/fun1/shaders/: frag.frag  vert.vert
1/fun2/: fun2.cpp
1/fun2/shaders/: vert.vert
1/fun3/: fun3.cpp
1/fun3/shaders/: obj.frag  vert.vert
1/fun3p/: fun3p.cpp
1/fun3v/: fun3v.cpp
1/fun4/: CMakeLists.txt
1/fun4/shaders/: lamp.frag  obj.frag  vert.vert
1/fun5/: CMakeLists.txt  fun5.cpp
1/fun5/shaders/: vert.vert
1/funbg/: CMakeLists.txt  funbg.cpp
1/triangle/: CMakeLists.txt  triangle.cpp
MotokoGL/: CMakeLists.txt  Material.h  MaterialT.h  MotokoGL.h  ShaderProg.cpp  ShaderProg.h  SimpleCamera.h  Tex.cpp  Vao.cpp  Vao.h  Window.cpp  Window.h  fatal.h  glheader.h  texture.cpp  texture.h
build-pract-External_MinGW-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  openglfun2_pract.cbp
build-pract-External_MinGW-Default/MotokoGL/: Makefile  MotokoGL.cbp  cmake_install.cmake
build-pract-External_MinGW-Default/home1/: Makefile  cmake_install.cmake  home1.cbp
build-pract-External_MinGW-Default/home1/shaders/: frag.frag  vert.vert
build-pract-External_MinGW-Default/p1/: Makefile  cmake_install.cmake  p1.cbp
build-pract-External_MinGW-Default/triangle/: Makefile  cmake_install.cmake  triangle.cbp
build-pract-External_MinGW-Default/triangle/shaders/: frag.glsl
fun1/: CMakeLists.txt  IVao.h  ShaderProg.cpp  ShaderProg.h  Vao.cpp  Vao.h  Window.cpp  Window.h  fatal.h  fun1.cpp
fun2/: CMakeLists.txt  fun2.cpp
fun2/shaders/: frag.frag  vert.vert
fun3/: CMakeLists.txt  fun3.cpp
fun3/shaders/: obj.frag  vert.vert
fun3p/: CMakeLists.txt  fun3p.cpp
fun3p/shaders/: obj.frag  vert.vert
fun3v/: CMakeLists.txt
fun3v/shaders/: obj.frag  vert.vert
fun4/: fun4.cpp
fun4/shaders/: obj.frag
fun5/: fun5.cpp
fun5/shaders/: obj.frag  vert.vert
funbg/: funbg.cpp
pract/: CMakeLists.txt
pract/MotokoGL/: CMakeLists.txt  Tex.cpp  Vao.cpp  Vao.h  Window.h
pract/home1/: CMakeLists.txt  main.cpp
pract/home1/shaders/: frag.glsl
pract/home2/: CMakeLists.txt  main.cpp  vaofactory.cpp  vaofactory.h
pract/home2/shaders/: vert_tex.glsl
pract/home3/: CMakeLists.txt  main.cpp
pract/p1/: CMakeLists.txt  main.cpp
pract/p2/: CMakeLists.txt  main.cpp
pract/p2/shaders/: frag.glsl  vert.glsl
pract/triangle/: CMakeLists.txt  main.cpp
pract/triangle/shaders/: vert.glsl
triangle/: CMakeLists.txt  triangle.cpp
